--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Golden</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,6 +10,7 @@
     </head>
     <body>
         <header class="header">
+            <div class="container">
             <a href="#" class="header-logo">Golden</a>
             <nav class="header-nav">
             <ul class="nav-list">
@@ -29,8 +31,10 @@
         </li>
     </ul>
 </nav>
+</div>
         </header>
         <main class="service">
+            <div class="container">
             <section class="service-section">
                 <h2 class="service-title">Service</h2>
                 <ul class="service-list">
@@ -51,8 +55,10 @@
                     </li>
                 </ul>
             </section>
+        </div>
         </main>
         <footer class="footer">
+            <div class="container">
             <h2 class="footer-title">Contact us</h2>
             <form class="footer-form">
                 <input type="text" placeholder="your name" class="form-name">
@@ -61,6 +67,7 @@
                 <textarea name="message" id="" cols="30" rows="10" class="form-message"></textarea>
                 <button type="submit" class="form-button">Send message</button>
             </form>
+        </div>
         </footer>
     </body>
 </html>
